--- a/_data/locale.yaml
+++ b/_data/locale.yaml
@@ -14,7 +14,7 @@ homepage:
       tags: '<span>HTML/CSS</span><span>Web Design</span><span>UI/UX Design</span>'
       origin: 'BOATUS.ORG'
       link: '/projects/boatus-foundation/'
-      img: '/img/splash/grid.jpg'
+      img: '/img/splash/grid2.jpg'
       data_width: '1280'
       data_height: '1400'
       animation: 'module'
